[gd_scene load_steps=11 format=3 uid="uid://b6dh0nr3swbrr"]

[ext_resource type="Script" path="res://game.gd" id="1_w3sqe"]
[ext_resource type="Script" path="res://berd.gd" id="2_rc5ux"]
[ext_resource type="Script" path="res://obstacles.gd" id="3_502k3"]
[ext_resource type="PackedScene" uid="uid://gfiblfnbidu1" path="res://obstacle.tscn" id="4_o7vml"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_n3jl0"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_6rloq"]
sky_material = SubResource("ProceduralSkyMaterial_n3jl0")

[sub_resource type="Environment" id="Environment_2nmyt"]
background_mode = 2
sky = SubResource("Sky_6rloq")
tonemap_mode = 2

[sub_resource type="BoxMesh" id="BoxMesh_ywu8f"]
size = Vector3(30, 1, 10)

[sub_resource type="SphereShape3D" id="SphereShape3D_3gl7e"]

[sub_resource type="SphereMesh" id="SphereMesh_5hwn6"]

[node name="Game" type="Node3D"]
script = ExtResource("1_w3sqe")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_2nmyt")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.46106, 7.28869)

[node name="ground" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.5, 0)
mesh = SubResource("BoxMesh_ywu8f")

[node name="Berd" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.28339, 0)
script = ExtResource("2_rc5ux")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Berd"]
shape = SubResource("SphereShape3D_3gl7e")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Berd"]
mesh = SubResource("SphereMesh_5hwn6")

[node name="Obstacles" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.3099, 0, 0)
script = ExtResource("3_502k3")

[node name="Obstacle" parent="Obstacles" instance=ExtResource("4_o7vml")]

[node name="GameOverSplash" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="GameOverSplash"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.376471)

[node name="CenterContainer" type="CenterContainer" parent="GameOverSplash"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverSplash/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GameOverSplash/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "YOU DEAD!"

[node name="RestartButton" type="Button" parent="GameOverSplash/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "RESTART"

[node name="ScoreUI" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.5
offset_top = -224.0
offset_right = 25.5
offset_bottom = -201.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "SCORE"

[connection signal="death" from="Berd" to="." method="_on_berd_death"]
[connection signal="obstacle_passed" from="Obstacles/Obstacle" to="Obstacles" method="_on_obstacle_obstacle_passed"]
[connection signal="pressed" from="GameOverSplash/CenterContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
